deploy/base/git/cgit/deployment.cgit.k8s.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cgit
spec:
  template:
    spec:
      containers:
        - name: cgit
          image: index.docker.io/clearlinux/cgit
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - mountPath: /var/www/cgit
              name: repos
      volumes:
        - name: repos
          hostPath:
            path: /opt/c33/git/data
