deploy/base/git/cgit/service.cgit.k8s.yaml
apiVersion: v1
kind: Service
metadata:
  name: cgit
spec:
  ports:
    - port: 80
      targetPort: http
