deploy/base/git/cgit/virtualservice.cgit.k8s.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: cgit
spec:
  gateways:
    - knative-serving/knative-ingress-gateway
  hosts:
    - cgit.seankhliao.com
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: git
